--- a/output/dales_models/bevmae_vsize0.6_D2362W3_pillar144_dales/bevmae_vsize0.6_D2362W3_pillar144_dales_100/bevmae_vsize0.6_D2362W3_pillar144_dales.yaml
+++ b/output/dales_models/bevmae_vsize0.6_D2362W3_pillar144_dales/bevmae_vsize0.6_D2362W3_pillar144_dales_100/bevmae_vsize0.6_D2362W3_pillar144_dales.yaml
@@ -1,26 +1,24 @@
 # follows pretraining: als_models/bevmae_als_voxel_ep_30_sample100_v0.6_bs12
-CLASS_NAMES: [
-    "S1",
-    "S2",
-    "S3",
-    "S4",
-    "S5",
-    "S6",
-    "S7",
-    "S8",
-    "S9"
+CLASS_NAMES: [ # removed "unlabeled" class
+  "Ground",
+  "Vegetation",
+  "Cars",
+  "Trucks",
+  "Power Lines",
+  "Fences",
+  "Poles",
+  "Buildings"
 ]
 
 TARGET_BEST_SCORE_NAME: mIoU
-PRETRAINED_MODEL: /home/martianxiu/code/OpenPCDet/output/als_models/bevmae_pretrain_mask0.7_D2362W3_sample40_als/bevmae_pretrain_mask0.7_D2362W3_sample40_als_1/ckpt/latest_model.pth
+PRETRAINED_MODEL: 
 
 
 DATA_CONFIG:
-    _BASE_CONFIG_: cfgs/dataset_configs/opengfcls_dataset.yaml
+    _BASE_CONFIG_: cfgs/dataset_configs/dales_dataset.yaml
     IGNORE_INDEX: 255
-    LOOP: 1 # def: 60
-    # POINT_CLOUD_RANGE: [-72, -72, 0, 72, 72, 288] # pillar sampling (144m crop), voxel_size=0.6
-    POINT_CLOUD_RANGE: [-52.8, -52.8, 0, 52.8, 52.8, 288] # the datasets are 50m tiles 
+    LOOP: 60 # def: 60
+    POINT_CLOUD_RANGE: [-72, -72, 0, 72, 72, 288] # pillar sampling (144m crop), voxel_size=0.6
     VOXEL_SIZE: 0.6
     INFO_LIMIT:  # percentage of training data 
     PRETRAIN_MODE: False
@@ -55,9 +53,9 @@ DATA_CONFIG:
             'test': True
           }
         
-        # - NAME: pillar_crop # crop a block. 
-        #   PILLAR_SIZE: 144
-        #   GRID_SIZE_2D: 10
+        - NAME: pillar_crop # crop a block. 
+          PILLAR_SIZE: 144
+          GRID_SIZE_2D: 10
 
         - NAME: transform_points_to_voxels_PointToVoxel 
           VOXEL_SIZE: [0.6, 0.6, 0.6] # follows pre-training 
@@ -70,14 +68,14 @@ DATA_CONFIG:
 
 
 DATA_CONFIG_VAL:
-    _BASE_CONFIG_: cfgs/dataset_configs/opengfcls_dataset.yaml
+    _BASE_CONFIG_: cfgs/dataset_configs/dales_dataset.yaml
     IGNORE_INDEX: 255
     LOOP: 1
-    POINT_CLOUD_RANGE: [-52.8, -52.8, 0, 52.8, 52.8, 288] # the datasets are 50m tiles 
+    POINT_CLOUD_RANGE: [-72, -72, 0, 72, 72, 288] # pillar sampling (144m crop), voxel_size=0.6
     VOXEL_SIZE: 0.6
     INFO_LIMIT: # percentage of validation data  
     PRETRAIN_MODE: False
-    BATCH_SIZE_VAL: 32
+
     USE_LOCAL_STORAGE: False
     LOCAL_STORAGE_PATH: SGE_ARDIR
     LOCAL_STORAGE_FILE_LIMIT: 7500
@@ -92,6 +90,11 @@ DATA_CONFIG_VAL:
             'test': True
           }
         
+        # val files are already tiled  
+
+        # - NAME: pillar_crop # crop a block. 
+        #   PILLAR_SIZE: 256
+        #   GRID_SIZE_2D: 10
 
         - NAME: transform_points_to_voxels_PointToVoxel 
           VOXEL_SIZE: [0.6,0.6,0.6] # follows pre-training 
@@ -103,25 +106,25 @@ DATA_CONFIG_VAL:
           }
 
 MODEL:
-    NAME: BEV_MAE_Cls
+    NAME: BEV_MAE_UNet
 
     VFE:
         NAME: MeanVFE
 
     BACKBONE_3D:
-        NAME: VoxelResBackBone8x_expand
+        NAME: VoxelResBackBone8xUNet_expand
         WIDTH_MUL: 3 # input_dim = 16 * WIDTH_MUL
         NUM_BLOCKS: [2,3,6,2] # default: [2,2,2,2] 
 
-    CLS_HEAD: 
-        NAME: GlobalMeanMaxClassificationHead
-        IN_CHANNEL: 768 # 384 * 2, mean and max concat
+    SEG_HEAD: 
+        NAME: SegmentationHead
+        IN_CHANNEL: 16
         LOSS_CONFIG: 
             IGNORE_INDEX: 255 # unlabeled 
-        CLS_FC: [256, 128]
+        CLS_FC: [16, 16]
 
 OPTIMIZATION: # optimizer and scheduler config
-    BATCH_SIZE_PER_GPU: 32 # default 4. V-node ok 
+    BATCH_SIZE_PER_GPU: 12 # default 4. V-node ok 
     # BATCH_SIZE_PER_GPU: 2 # debug
     NUM_EPOCHS: 50
 
